get app3 to work